fix accordion height & margins on mobile

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,3 @@
-@import url(_variables.scss);
 body {
   font-family: 'Montserrat', sans-serif;
   color: white;
@@ -7,7 +6,7 @@ body {
 }
 main {
   margin: 0 100px;
-  padding-bottom: 209px;
+  padding-bottom: 229px;
 
   @media (max-width: 1090px) {
     margin: 0 20px;
