--- a/src/styles/components/_accordion.scss
+++ b/src/styles/components/_accordion.scss
@@ -7,7 +7,7 @@
 }
 .accordion--container {
     width: 100%;
-    margin: 30px 0;
+    margin-top: 30px;
     & .accordion--title {
         background-color: #FF6060;
         border-radius: 5px;
@@ -19,9 +19,15 @@
             margin: 0;
             font-size: 24px;
             font-weight: 400;
+            @media (max-width: 885px) {
+                font-size: 13px;
+              }
         }
         & .accordion--arrow {
             transition: all 0.5s ease-out;
+            @media (max-width: 885px) {
+                width: 15px;
+              }
         }
         & .arrow--opened {
             rotate: 180deg;
